fix: fix font header sizing and event page header spacing

--- a/src/app/(non-home)/events/Events.scss
+++ b/src/app/(non-home)/events/Events.scss
@@ -56,6 +56,7 @@
 
     h1 {
       padding-block: 5rem;
+      padding-bottom: 8rem;
     }
 
     padding-inline: clamp(24px, 5px + 5vw, 6rem);
