--- a/src/app/components/CommunityPage/CommunityHero/CommunityHero.scss
+++ b/src/app/components/CommunityPage/CommunityHero/CommunityHero.scss
@@ -88,7 +88,7 @@
       background-image: url(../community-assets/green-zigzag.svg);
       bottom: -10px;
       height: 13px;
-      width: 100%;
+      width: 454px;
     }
   }
 }
